--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -83,13 +83,19 @@
     #nav-links {
       .hamburger {
         display: block;
+        height: 100%;
+        z-index: 2;
       }
       .menu {
-        display: none;
+        height: 0;
+        opacity: 0;
+        transition: height 0.3s ease-in, opacity 0.3s ease;
       }
       // needs transition
       .show {
-        display: block;
+        height: 161px;
+        opacity: 1;
+        transition: height 0.3s ease-out, opacity 0.5s ease-out;
       }
       text-align: center;
       padding: 0;
